--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.17)
 project(par_sys_exc2)
 
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-fopenmp")
 set(CPM_DOWNLOAD_LOCATION "${CMAKE_BINARY_DIR}/CMakeFiles/CPM.cmake")
-
-
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static -static-libgcc -static-libstdc++")
 
 ##FIND_PACKAGE(OpenMP REQUIRED)
 ##if (OPENMP_FOUND)
@@ -23,6 +23,7 @@ main.cpp
 )
 target_link_libraries(
         par_sys_exc2_v4
+        -static-libgcc -static-libstdc++
 
 
 )
